--- a/packages/reactui/globals/globals.css
+++ b/packages/reactui/globals/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
  
-@layer base {
+/* @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
@@ -64,7 +64,7 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
-}
+} */
  
 @layer base {
   body {
