--- a/packages/reactui/public/index.html.tmpl
+++ b/packages/reactui/public/index.html.tmpl
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="icons/favicon-color-16x16.png" type="image/png" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
     <title>FlexiGPT ReactUI</title>
+    <style type="text/css">
+      body {
+        margin: 0;
+      }
+    </style>
     <script>
       window.__ICON_PATHS__ = {
         icon36x36: 'icons/favicon-color-36x36.png',
