--- a/media/scripts/main.css
+++ b/media/scripts/main.css
@@ -64,8 +64,8 @@ h6,
 h7,
 hr,
 p {
-  margin-block-start: .8em !important;
-  margin-block-end: .8em !important;
+  margin-block-start: 0.8em !important;
+  margin-block-end: 0.8em !important;
   margin-inline-start: 0px !important;
   margin-inline-end: 0px !important;
 }
@@ -169,7 +169,7 @@ button.secondary:hover {
   background: var(--vscode-button-secondaryHoverBackground);
 }
 
-input:not([type="checkbox"]),
+input:not([type='checkbox']),
 textarea {
   display: block;
   width: 100%;
@@ -179,6 +179,10 @@ textarea {
   color: var(--vscode-input-foreground);
   outline-color: var(--vscode-input-border);
   background-color: var(--vscode-input-background);
+  overflow-y: auto; /* Enable vertical scrollbar if content exceeds maximum height */
+  resize: none; /* Disable resizing */
+  max-height: 16em; /* Set maximum height to accommodate 16 rows */
+  line-height: 1.2; /* Adjust line height for consistent row height */
 }
 
 input::placeholder,
@@ -186,7 +190,7 @@ textarea::placeholder {
   color: var(--vscode-input-placeholderForeground);
 }
 
-[contenteditable="true"] {
+[contenteditable='true'] {
   outline: 1px solid var(--vscode-focusBorder);
 }
 
@@ -246,16 +250,26 @@ textarea::placeholder {
 .textarea-wrapper {
   display: grid;
   font-size: var(--vscode-font-size);
+  overflow: hidden;
+  max-height: 16em; /* Set maximum height to accommodate 16 rows */
+  height: auto;
 }
 
 .textarea-wrapper::after {
-  content: attr(data-replicated-value) " ";
+  content: attr(data-replicated-value) ' ';
   white-space: pre-wrap;
   visibility: hidden;
 }
 
 .textarea-wrapper > textarea {
-  overflow: hidden auto;
+  border: 1px solid black;
+  font: inherit;
+  resize: none; /* Disable resizing */
+  display: block;
+  width: 100%;
+  height: 100%; /* Fill the available height */
+  max-height: 16em; /* Set maximum height to accommodate 16 rows */
+  line-height: 1.2; /* Adjust line height for consistent row height */
 }
 
 .textarea-wrapper > textarea,
@@ -338,7 +352,7 @@ textarea::placeholder {
 .result-streaming > ul:last-child li:last-child:after {
   -webkit-animation: blink 1s steps(5, start) infinite;
   animation: blink 1s steps(5, start) infinite;
-  content: "▋";
+  content: '▋';
   margin-left: 0.25rem;
   vertical-align: baseline;
 }
